[feat]:Auth + User Done 100%
